--- a/team/pom.xml
+++ b/team/pom.xml
@@ -194,6 +194,19 @@
 		</dependency>
 		
 		
+		<!-- JSON lib -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.6</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.10.1</version>
+		</dependency>
+		
 	</dependencies>
     <build>
         <plugins>
