--- a/team/pom.xml
+++ b/team/pom.xml
@@ -193,6 +193,18 @@
 		    <scope>test</scope>
 		</dependency>
 		
+		<!-- MultipartHttpServletRequset -->
+		    <dependency>
+		        <groupId>commons-io</groupId>
+		        <artifactId>commons-io</artifactId>
+		        <version>2.0.1</version>
+		    </dependency>
+		
+		    <dependency>
+		        <groupId>commons-fileupload</groupId>
+		        <artifactId>commons-fileupload</artifactId>
+		        <version>1.2.2</version>
+		    </dependency>
 		
 	</dependencies>
     <build>
