--- a/team/pom.xml
+++ b/team/pom.xml
@@ -82,6 +82,18 @@
 			</exclusions>
 		</dependency>
 
+		<!-- mail -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+	
 		<!-- @Inject -->
 		<dependency>
 			<groupId>javax.inject</groupId>
