--- a/team/pom.xml
+++ b/team/pom.xml
@@ -173,6 +173,12 @@
 		
 		<!-- JSON Library -->
 		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20190722</version>
+		</dependency>
+				
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.6</version>
