--- a/team/src/main/resources/env.properties
+++ b/team/src/main/resources/env.properties
@@ -1,5 +1,5 @@
 datasource.driver=com.mysql.jdbc.Driver
-datasource.url=jdbc:mysql://@211.197.18.246:3306/team?serverTimezone=UTC
+datasource.url=jdbc:mysql://@211.197.18.246:3306/team?serverTimezone=Asia/Seoul
 datasource.username=team200330
 datasource.password=xlavmffos30
 datasource.minidle=20
